# path-capi-python

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: nonlinear_adapter_plan.md  pyomo_bridge_plan.md
examples/: check_runtime.py  minimal_mcp.py
src/path_capi_python/: __init__.py  loader.py  mcp.py  pyomo_adapter.py  pyomo_solver.py
tests/: _fake_path_runtime.py  test_loader.py  test_mcp_linear.py  test_nonlinear_mcp.py  test_pyomo_adapter.py  test_pyomo_adapter_constraints.py  test_pyomo_solver_plugin.py
